# SkyrimNet-Prisma-Dashboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  README.md
SKSE/Plugins/: SkyrimNetPrismaDashboard.ini
src/: PrismaUI_API.h  audio.h  config.h  http_proxy.h  main.cpp  pch.h  shell_html.h
src/injections/: audio_polyfill.h  autoscroll.h  clipboard.h  drag_select.h  editor_fixes.h  file_input.h  shell.h  storage_persist.h  test_page_audio.h
src/keyhandler/: keyhandler.cpp  keyhandler.h
